--- a/public/myIndex.html
+++ b/public/myIndex.html
@@ -68,7 +68,7 @@
                         <div class="songAdviceBox clearfix boxItem">
                             <div class="fl title"><div class="musicIco ico"></div>单曲</div>
                             <div class="fl right">
-                                <ul class="songAdvice" id="songAdvice">
+                                <ul class="songAdvice" id="songAdviceUl">
                                     <!-- <li class='adviceLi'>
                                         <span class="adviceSongName">1</span>-
                                         <span class="adviceSongArt">2</span>
@@ -919,13 +919,13 @@
                     </span>
                 </li>
                 <!-- 进度条 -->
-                <li class="barBox pore">
+                <li class="barBox pore pointer">
                     <p>
                         <a href="" class="songName barSongName" ></a>
                         <a href="" class="songArt barSongArt" ></a>
                     </p>
+                    <!-- 进度条 -->
                     <div class="bar pore" id="bar">
-                        <!-- 进度条 -->
                         <div class="progress poab" id="progress"></div>
                         <div class="barSpan poab pointer" id="barSpan"></div>
                     </div>
@@ -977,11 +977,10 @@
                 <div class="boxBd pore">
                     <div class="playList fl" >
                         <ul id="songListUl">
-                            <!-- <li class=" playListItem pore pointer " >
+                            <!-- <li class=" playListItem pore pointer cancellLi" >
                                 <span class="itemPlay"></span>
                                 <span class="itemSongName">1</span>
                                 <span class="itemArtName poab ">1</span>
-                                <span class="cancellSong poab " ></span>
                             </li> -->
                         </ul>
                     </div>
