--- a/public/userHome.html
+++ b/public/userHome.html
@@ -67,7 +67,7 @@
                         <div class="songAdviceBox clearfix boxItem">
                             <div class="fl title"><div class="musicIco ico"></div>单曲</div>
                             <div class="fl right">
-                                <ul class="songAdvice" id="songAdvice">
+                                <ul class="songAdvice" id="songAdviceUl">
                                     <!-- <li class='adviceLi'>
                                         <span class="adviceSongName">1</span>-
                                         <span class="adviceSongArt">2</span>
@@ -330,7 +330,7 @@
                      </p>
                      <div class="bar pore" id="bar">
                          <div class="progress poab" id="progress">
-                             <div class="barSpan poab hide" id="barspan"></div>
+                             <div class="barSpan poab " id="barSpan"></div>
                          </div>
                      </div>
                      <div class="timeInfo poab" id="timeInfo"> 
@@ -346,7 +346,7 @@
                  <!-- 控制：音量、循环、播放列表 -->
                  <li class="controlsRight">
                      <span class="controlBorder"></span>
-                     <span class="volume"></span>
+                     <span class="volume" id="volumeBtn"></span>
                      <span class="loopBtn" id="loopBtn"></span>
                      <span class="playListBtn" id="playListBtn"></span>
                  </li>
