--- a/public/myIndex.html
+++ b/public/myIndex.html
@@ -203,7 +203,8 @@
     <!-- 遮挡层 -->
     <div class="loginBg hide" id="loginBg"></div>
     <!-- 登录填写模块end -->
-
+    <!-- 收藏成功 -->
+    <div class="collectFeedback" id="collectFeedback"></div>
     <!-- 返回顶部start -->
     <div class="returnTop hide" id="returnTop"></div>
     <!-- 返回顶部end -->
@@ -936,7 +937,7 @@
                 </li>
                 <!-- 收藏与分享 -->
                 <li class="open">
-                    <span class="songCollect"></span>
+                    <span class="songCollect pointer" id="songCollect"></span>
                     <span class="songRecommend"></span>
                 </li>
                 <!-- 控制：音量、循环、播放列表 -->
@@ -959,14 +960,14 @@
                 <div class="boxHd pore">
                     <div class="fl headLeft pore"> 
                         <div class="headTitle poab" id="playListTitle">播放列表</div>
-                        <div class="headCollect poab">
+                        <div class="headCollect poab" id="collectAll">
                             <span class="headCollectImg"></span>
-                            收藏全部
+                            <a href="javascript:;">收藏全部</a> 
                         </div>
                         <div class="headborder poab"></div>
-                        <div class="cancelAll poab">
+                        <div class="cancelAll poab" id="cancelAll">
                             <span class="cancelAllImg"></span>
-                            清除
+                            <a href="javascript:;">清除</a> 
                         </div>
                     </div>
                     <div class="fl headRight pore">
@@ -981,6 +982,7 @@
                                 <span class="itemPlay"></span>
                                 <span class="itemSongName">1</span>
                                 <span class="itemArtName poab ">1</span>
+                                <span class="itemCancel poab"></span>
                             </li> -->
                         </ul>
                     </div>
